# founderbench

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
.codex/: config.toml
configs/: credentials.env.example  pilot-24h.toml  pilot-72h.toml  pilot-pressure-24h.toml  smoke-2h.toml  smoke-local.toml  smoke-sol.toml
configs/agent/: AGENTS-pressure.md  AGENTS.md  opencode.json
configs/agent/skills/agent-browser/: SKILL.md
configs/agent/skills/agent-card/: SKILL.MD
configs/agent/skills/asc-cli/: SKILL.md
configs/agent/skills/bank/: SKILL.md
configs/agent/skills/computer-use/: SKILL.md
docs/: experiment-design.md  failure-taxonomy.md  mac-checklist.md  runbook.md  trace-analysis-rubric.md
machine/: 10-power.sh  20-updates.sh  30-toolchain.sh  40-tcc.sh  45-sudo.sh  50-keychain.sh  60-credentials.sh  65-mcp-auth.sh  70-agent-workspace.sh  80-install-launchd.sh  lib.sh  setup.sh  verify.sh
machine/launchd/: com.founderbench.orchestrator.plist.template
orchestrator/: run-daemon.sh
orchestrator/src/: budget.ts  checkpoint.ts  config.ts  index.ts  metrics.ts  opencode.ts  preflight.ts  watchdog.ts
replay/: index.html  serve.mjs
tests/: config.test.ts  meta-ads-mcp.test.ts  tracing.test.ts
tools/: README.md  fastmail-jmap.sh  meta-ads-mcp.sh  revenuecat.sh  runs.sh  watch-run.sh  watch_run.py
tools/meta-ads-mcp/src/: client.ts  config.ts  server.ts
tracing/: export_atif.py  export_vf_trace.py  prep_analysis.py  pyproject.toml
tracing/src/: collectors.ts  proxy-cli.ts  proxy.ts  trace.ts
(+12 files in other folders)
