[project]
name = "founderbench-tracing"
version = "0.1.0"
description = "Trace exporters: runs/<id>/trace.jsonl -> Harbor ATIF / verifiers v1 Trace"
# <3.14: harbor -> litellm ships a PyO3 extension (pyo3 0.23) that supports
# CPython <= 3.13; on 3.14 uv falls back to an sdist build that fails.
requires-python = ">=3.12,<3.14"
dependencies = [
    # Harbor's ATIF pydantic models + validator (export_atif.py)
    "harbor>=0.19.0",
    # verifiers v1 Trace / message graph (export_vf_trace.py)
    "verifiers @ git+https://github.com/PrimeIntellect-ai/verifiers",
]

[tool.uv]
# Exporters are plain scripts, not an installable package.
package = false
